# gerador-entradas

./: README.md  pyproject.toml
src/: main.py
